Try embedding svg content as inlinecontent in sld

--- a/python/core/auto_generated/symbology/qgssymbollayerutils.sip.in
+++ b/python/core/auto_generated/symbology/qgssymbollayerutils.sip.in
@@ -535,6 +535,9 @@ Creates a SE 1.1 anchor point element as a child of the specified element
 %End
 
     static void createOnlineResourceElement( QDomDocument &doc, QDomElement &element, const QString &path, const QString &format );
+
+    static void createInlineContentElement( QDomDocument &doc, QDomElement &element, const QByteArray &content, const QString &format );
+
     static bool onlineResourceFromSldElement( QDomElement &element, QString &path, QString &format );
 
     static void createGeometryElement( QDomDocument &doc, QDomElement &element, const QString &geomFunc );
