--- a/python/core/auto_generated/qgis.sip.in
+++ b/python/core/auto_generated/qgis.sip.in
@@ -290,6 +290,7 @@ The development version
       Static,
       Field,
       Expression,
+      Keyframe,
     };
 
     enum class SldExportOption
