--- a/python/core/auto_generated/symbology/qgsrenderer.sip.in
+++ b/python/core/auto_generated/symbology/qgsrenderer.sip.in
@@ -67,6 +67,8 @@ class QgsFeatureRenderer
       sipType = sipType_QgsHeatmapRenderer;
     else if ( type == QLatin1String( "invertedPolygonRenderer" ) )
       sipType = sipType_QgsInvertedPolygonRenderer;
+    else if ( type == QLatin1String( "mergedFeatureRenderer" ) )
+      sipType = sipType_QgsMergedFeatureRenderer;
     else if ( type == QLatin1String( "pointCluster" ) )
       sipType = sipType_QgsPointClusterRenderer;
     else if ( type == QLatin1String( "pointDisplacement" ) )
@@ -77,6 +79,10 @@ class QgsFeatureRenderer
       sipType = sipType_QgsNullSymbolRenderer;
     else if ( type == QLatin1String( "embeddedSymbol" ) )
       sipType = sipType_QgsEmbeddedSymbolRenderer;
+    else if ( type == QLatin1String( "lineCluster" ) )
+      sipType = sipType_QgsLineClusterRenderer;
+    else if ( type == QLatin1String( "lineDisplacement" ) )
+      sipType = sipType_QgsLineDisplacementRenderer;
     else
       sipType = 0;
 %End
