--- a/python/gui/auto_generated/symbology/qgslineclusterrendererwidget.sip.in
+++ b/python/gui/auto_generated/symbology/qgslineclusterrendererwidget.sip.in
@@ -8,7 +8,7 @@
 
 
 
-class QgsLineClusterRendererWidget : QgsRendererWidget
+class QgsLineClusterRendererWidget : QgsRendererWidget, QgsExpressionContextGenerator
 {
 %Docstring(signature="appended")
 A widget used represent options of a :py:class:`QgsLineClusterRenderer`
@@ -46,6 +46,7 @@ Constructor
 
     virtual void setDockMode( bool dockMode );
 
+    virtual QgsExpressionContext createExpressionContext() const;
 
 };
 
