Mke webkit and qt6 combination raise an explicit error instead of silently dusabling webkit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -501,7 +501,10 @@ if(WITH_CORE)
   else()
     add_definitions(-DQT_NO_PRINTER)
   endif()
-  if (WITH_QTWEBKIT AND NOT BUILD_WITH_QT6)
+  if (WITH_QTWEBKIT)
+    if(BUILD_WITH_QT6)
+      message(FATAL_ERROR "Qt WebKit support cannot be enabled on Qt 6 builds")
+    endif()
     find_package(Qt5WebKit REQUIRED)
     find_package(Qt5WebKitWidgets REQUIRED)
   endif()
