If webengine support enabled, link core to webengine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -521,6 +521,9 @@ if(WITH_CORE)
     if(WITH_QTWEBKIT)
       message(FATAL_ERROR "QtWebEngine support cannot be enabled if Qt WebKit support is enabled")
     endif()
+
+    find_package(${QT_VERSION_BASE} COMPONENTS WebEngineCore REQUIRED)
+
     add_definitions(-DWITH_QTWEBENGINE)
     message(STATUS "QtWebEngine support enabled")
     set(HAVE_WEBENGINE TRUE)  # used in qgsconfig.h
