--- a/python/core/core.sip.in
+++ b/python/core/core.sip.in
@@ -105,6 +105,7 @@ done:
 %Feature HAVE_QTPRINTER
 %Feature ANDROID
 %Feature VECTOR_MAPPED_TYPE
+%Feature HAVE_WEBENGINE_SIP
 
 %Include conversions.sip
 %Include qgsexception.sip
