Fix library include for lcms2

--- a/external/PDF4QT/Pdf4QtLibCore/CMakeLists.txt
+++ b/external/PDF4QT/Pdf4QtLibCore/CMakeLists.txt
@@ -156,7 +156,7 @@ GENERATE_EXPORT_HEADER(Pdf4QtLibCore
                        EXPORT_FILE_NAME "${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/pdf4qtlibcore_export.h")
 
 target_link_libraries(Pdf4QtLibCore PRIVATE Qt6::Core Qt6::Gui Qt6::Xml Qt6::Svg)
-#target_link_libraries(Pdf4QtLibCore PRIVATE lcms2::lcms2)
+target_link_libraries(Pdf4QtLibCore PRIVATE ${LCMS2_LIBRARIES})
 target_link_libraries(Pdf4QtLibCore PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 target_link_libraries(Pdf4QtLibCore PRIVATE ZLIB::ZLIB)
 target_link_libraries(Pdf4QtLibCore PRIVATE Freetype::Freetype)
