--- a/external/PDF4QT/CMakeLists.txt
+++ b/external/PDF4QT/CMakeLists.txt
@@ -69,6 +69,7 @@ find_package(OpenSSL REQUIRED)
 find_package(lcms2 REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(Freetype REQUIRED)
+find_package(Fontconfig REQUIRED)
 find_package(OpenJPEG CONFIG REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(PNG REQUIRED)
