--- a/cmake_templates/qgsconfig.h.in
+++ b/cmake_templates/qgsconfig.h.in
@@ -122,6 +122,8 @@
 #cmakedefine HAS_KDE_QT5_SMALL_CAPS_FIX
 #cmakedefine HAS_KDE_QT5_FONT_STRETCH_FIX
 
+#cmakedefine HAVE_PDF4QT
+
 #cmakedefine HAVE_CRASH_HANDLER
 
 #cmakedefine HAVE_WEBENGINE
