--- a/python/core/auto_generated/3d/qgsabstract3dsymbol.sip.in
+++ b/python/core/auto_generated/3d/qgsabstract3dsymbol.sip.in
@@ -68,6 +68,9 @@ Returns the list of the vector layer geometry types which are compatible with th
     {
       PropertyHeight,
       PropertyExtrusionHeight,
+      PropertyScaleX,
+      PropertyScaleY,
+      PropertyScaleZ,
     };
 
     static const QgsPropertiesDefinition &propertyDefinitions();
